fixed some errors and made a change to the global variable color to match contrast 1

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ header {
 body {
     font-family: var(--body-font);
     color: var(--secondary-color);
-    background: linear-gradient(var(--accent1-color), var(--accent2-color));
+    /* background: linear-gradient(var(--accent1-color), var(--accent2-color)); */
 }
 
 header, main, footer {
@@ -86,6 +86,7 @@ header nav a{
 h1, h2{
     font-family: var(--heading-font);
     color: var(--primary-color);
+    background-color: var(--accent2-color);
 }
 
 nav, p, section,article {
@@ -233,7 +234,7 @@ footer img {
     margin: 2px auto 10px auto;
     align-items: center;
     top: 0;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     border-radius: 5px;
     /* display: flex; */
 }
@@ -417,7 +418,7 @@ button {
     width: 40%;
     height: 2.5rem;
     color: var(--accent1-color);
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     text-align: center;
 }
 
